frontend de entrenado